# go-error

./: CMakeLists.txt  README.md
.github/workflows/: build_and_test.yml
_examples/: example_custom_error.main.cpp
cmake/: Testing.cmake
src/: basic.test.cpp  go-error-test.main.cpp
src/go/: error.cpp  error.hpp  error.test.cpp  error_cast.hpp  error_cast.test.cpp  error_code.hpp  error_code.test.cpp  error_string.hpp  error_string.test.cpp  errorf.hpp  errorf.test.cpp  go_error.hpp  wrap.cpp  wrap.hpp  wrap.test.cpp
src/go/detail/: meta_helpers.hpp
